[tool.poetry]
name = "comfyui"
version = "0.1.0"
description = ""
authors = ["CodeEagle <Stasura@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
torchsde = "^0.2.6"
torchvision = "^0.17.2"
einops = "^0.7.0"
transformers = ">=4.25.1"
safetensors = ">=0.3.0"
aiohttp = "^3.9.5"
pyyaml = "^6.0.1"
pillow = "^10.3.0"
scipy = "^1.13.0"
tqdm = "^4.66.2"
psutil = "^5.9.8"
kornia = ">=0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
